compiler_code_generator_hw3/y.output
Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 StatementList: StatementList Statement
    3              | Statement

    4 Statement: DeclarationStmt NEWLINE
    5          | SimpleStmt NEWLINE
    6          | Block
    7          | IfStmt
    8          | ForStmt
    9          | PrintStmt NEWLINE
   10          | NEWLINE

   11 Block: '{' StatementList '}'

   12 Operand: Literal
   13        | Identifier
   14        | '(' Expression ')'

   15 Literal: INT_LIT
   16        | FLOAT_LIT
   17        | BOOL_LIT
   18        | '"' STRING_LIT '"'

   19 ConversionExpr: INT '(' Expression ')'
   20               | FLOAT '(' Expression ')'

   21 TypeName: INT
   22         | FLOAT
   23         | STRING
   24         | BOOL

   25 ArrayType: '[' Expression ']'

   26 DeclarationStmt: VAR IDENT TypeName
   27                | VAR IDENT TypeName '=' Factor
   28                | VAR IDENT ArrayType TypeName

   29 SimpleStmt: AssignmentStmt
   30           | IncDecStmt
   31           | LogiLOR
   32           | ErrorStmt

   33 AssignmentStmt: Identifier_assign '=' Expression
   34               | Identifier_assign ADD_ASSIGN Expression
   35               | Identifier_assign SUB_ASSIGN Expression
   36               | Identifier_assign MUL_ASSIGN Expression
   37               | Identifier_assign QUO_ASSIGN Expression
   38               | Identifier_assign REM_ASSIGN Expression
   39               | Identifier ArrayType '=' Expression
   40               | Identifier ArrayType ADD_ASSIGN Expression
   41               | Identifier ArrayType SUB_ASSIGN Expression
   42               | Identifier ArrayType MUL_ASSIGN Expression
   43               | Identifier ArrayType QUO_ASSIGN Expression
   44               | Identifier ArrayType REM_ASSIGN Expression

   45 Identifier: IDENT

   46 Identifier_assign: IDENT

   47 IncDecStmt: IDENT INC
   48           | IDENT DEC

   49 ErrorStmt: Literal '=' Expression
   50          | Literal ADD_ASSIGN Expression
   51          | Literal SUB_ASSIGN Expression
   52          | Literal MUL_ASSIGN Expression
   53          | Literal QUO_ASSIGN Expression
   54          | Literal REM_ASSIGN Expression

   55 IfStmt: Iftemp Ifcomp Block
   56       | Iftemp Ifcomp Block ElseStmt

   57 Ifcomp: Comparison

   58 ElseStmt: Elsetemp Iftemp Ifcomp Block ElseStmt
   59         | Elsetemp Block

   60 Iftemp: IF

   61 Elsetemp: ELSE

   62 ForStmt: Fortemp ForComp Block
   63        | Fortemp Forsimp ';' ForComp2 ';' Forsimp2 Block

   64 Fortemp: FOR

   65 ForComp: Comparison

   66 ForComp2: Comparison

   67 Forsimp: SimpleStmt

   68 Forsimp2: SimpleStmt

   69 PrintStmt: PRINT '(' LogiLOR ')'
   70          | PRINTLN '(' LogiLOR ')'

   71 LogiLOR: LogiLOR LOR LogiLAND
   72        | LogiLAND

   73 LogiLAND: LogiLAND LAND Comparison
   74         | Comparison

   75 Comparison: Comparison GTR Expression
   76           | Comparison LSS Expression
   77           | Comparison GEQ Expression
   78           | Comparison LEQ Expression
   79           | Comparison EQL Expression
   80           | Comparison NEQ Expression
   81           | Expression

   82 Expression: Expression '+' Term
   83           | Expression '-' Term
   84           | Term

   85 Term: Term '*' Factor
   86     | Term '/' Factor
   87     | Term '%' Factor
   88     | Factor
   89     | ConversionExpr

   90 Factor: Operand
   91       | Identifier '[' Expression ']'
   92       | TRUE
   93       | FALSE
   94       | UnaryExpr

   95 UnaryExpr: '+' Factor
   96          | '-' Factor
   97          | '!' Factor


Terminals, with rules where they appear

$end (0) 0
'!' (33) 97
'"' (34) 18
'%' (37) 87
'(' (40) 14 19 20 69 70
')' (41) 14 19 20 69 70
'*' (42) 85
'+' (43) 82 95
'-' (45) 83 96
'/' (47) 86
';' (59) 63
'=' (61) 27 33 39 49
'[' (91) 25 91
']' (93) 25 91
'{' (123) 11
'}' (125) 11
error (256)
VAR (258) 26 27 28
INT (259) 19 21
FLOAT (260) 20 22
BOOL (261) 24
STRING (262) 23
NEWLINE (263) 4 5 9 10
INC (264) 47
DEC (265) 48
GEQ (266) 77
LEQ (267) 78
EQL (268) 79
NEQ (269) 80
GTR (270) 75
LSS (271) 76
ADD_ASSIGN (272) 34 40 50
SUB_ASSIGN (273) 35 41 51
MUL_ASSIGN (274) 36 42 52
QUO_ASSIGN (275) 37 43 53
REM_ASSIGN (276) 38 44 54
LAND (277) 73
LOR (278) 71
PRINT (279) 69
PRINTLN (280) 70
IF (281) 60
ELSE (282) 61
FOR (283) 64
TRUE (284) 92
FALSE (285) 93
INT_LIT (286) 15
FLOAT_LIT (287) 16
STRING_LIT (288) 18
BOOL_LIT (289) 17
IDENT (290) 26 27 28 45 46 47 48


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
Program (52)
    on left: 1, on right: 0
StatementList (53)
    on left: 2 3, on right: 1 2 11
Statement (54)
    on left: 4 5 6 7 8 9 10, on right: 2 3
Block (55)
    on left: 11, on right: 6 55 56 58 59 62 63
Operand (56)
    on left: 12 13 14, on right: 90
Literal (57)
    on left: 15 16 17 18, on right: 12 49 50 51 52 53 54
ConversionExpr (58)
    on left: 19 20, on right: 89
TypeName (59)
    on left: 21 22 23 24, on right: 26 27 28
ArrayType (60)
    on left: 25, on right: 28 39 40 41 42 43 44
DeclarationStmt (61)
    on left: 26 27 28, on right: 4
SimpleStmt (62)
    on left: 29 30 31 32, on right: 5 67 68
AssignmentStmt (63)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44, on right: 29
Identifier (64)
    on left: 45, on right: 13 39 40 41 42 43 44 91
Identifier_assign (65)
    on left: 46, on right: 33 34 35 36 37 38
IncDecStmt (66)
    on left: 47 48, on right: 30
ErrorStmt (67)
    on left: 49 50 51 52 53 54, on right: 32
IfStmt (68)
    on left: 55 56, on right: 7
Ifcomp (69)
    on left: 57, on right: 55 56 58
ElseStmt (70)
    on left: 58 59, on right: 56 58
Iftemp (71)
    on left: 60, on right: 55 56 58
Elsetemp (72)
    on left: 61, on right: 58 59
ForStmt (73)
    on left: 62 63, on right: 8
Fortemp (74)
    on left: 64, on right: 62 63
ForComp (75)
    on left: 65, on right: 62
ForComp2 (76)
    on left: 66, on right: 63
Forsimp (77)
    on left: 67, on right: 63
Forsimp2 (78)
    on left: 68, on right: 63
PrintStmt (79)
    on left: 69 70, on right: 9
LogiLOR (80)
    on left: 71 72, on right: 31 69 70 71
LogiLAND (81)
    on left: 73 74, on right: 71 72 73
Comparison (82)
    on left: 75 76 77 78 79 80 81, on right: 57 65 66 73 74 75 76 77
    78 79 80
Expression (83)
    on left: 82 83 84, on right: 14 19 20 25 33 34 35 36 37 38 39 40
    41 42 43 44 49 50 51 52 53 54 75 76 77 78 79 80 81 82 83 91
Term (84)
    on left: 85 86 87 88 89, on right: 82 83 84 85 86 87
Factor (85)
    on left: 90 91 92 93 94, on right: 27 85 86 87 88 95 96 97
UnaryExpr (86)
    on left: 95 96 97, on right: 94


State 0

    0 $accept: . Program $end

    VAR        shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    NEWLINE    shift, and go to state 4
    PRINT      shift, and go to state 5
    PRINTLN    shift, and go to state 6
    IF         shift, and go to state 7
    FOR        shift, and go to state 8
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 14
    '{'        shift, and go to state 15
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Program            go to state 21
    StatementList      go to state 22
    Statement          go to state 23
    Block              go to state 24
    Operand            go to state 25
    Literal            go to state 26
    ConversionExpr     go to state 27
    DeclarationStmt    go to state 28
    SimpleStmt         go to state 29
    AssignmentStmt     go to state 30
    Identifier         go to state 31
    Identifier_assign  go to state 32
    IncDecStmt         go to state 33
    ErrorStmt          go to state 34
    IfStmt             go to state 35
    Iftemp             go to state 36
    ForStmt            go to state 37
    Fortemp            go to state 38
    PrintStmt          go to state 39
    LogiLOR            go to state 40
    LogiLAND           go to state 41
    Comparison         go to state 42
    Expression         go to state 43
    Term               go to state 44
    Factor             go to state 45
    UnaryExpr          go to state 46


State 1

   26 DeclarationStmt: VAR . IDENT TypeName
   27                | VAR . IDENT TypeName '=' Factor
   28                | VAR . IDENT ArrayType TypeName

    IDENT  shift, and go to state 47


State 2

   19 ConversionExpr: INT . '(' Expression ')'

    '('  shift, and go to state 48


State 3

   20 ConversionExpr: FLOAT . '(' Expression ')'

    '('  shift, and go to state 49


State 4

   10 Statement: NEWLINE .

    $default  reduce using rule 10 (Statement)


State 5

   69 PrintStmt: PRINT . '(' LogiLOR ')'

    '('  shift, and go to state 50


State 6

   70 PrintStmt: PRINTLN . '(' LogiLOR ')'

    '('  shift, and go to state 51


State 7

   60 Iftemp: IF .

    $default  reduce using rule 60 (Iftemp)


State 8

   64 Fortemp: FOR .

    $default  reduce using rule 64 (Fortemp)


State 9

   92 Factor: TRUE .

    $default  reduce using rule 92 (Factor)


State 10

   93 Factor: FALSE .

    $default  reduce using rule 93 (Factor)


State 11

   15 Literal: INT_LIT .

    $default  reduce using rule 15 (Literal)


State 12

   16 Literal: FLOAT_LIT .

    $default  reduce using rule 16 (Literal)


State 13

   17 Literal: BOOL_LIT .

    $default  reduce using rule 17 (Literal)


State 14

   45 Identifier: IDENT .
   46 Identifier_assign: IDENT .
   47 IncDecStmt: IDENT . INC
   48           | IDENT . DEC

    INC  shift, and go to state 52
    DEC  shift, and go to state 53

    ADD_ASSIGN  reduce using rule 46 (Identifier_assign)
    SUB_ASSIGN  reduce using rule 46 (Identifier_assign)
    MUL_ASSIGN  reduce using rule 46 (Identifier_assign)
    QUO_ASSIGN  reduce using rule 46 (Identifier_assign)
    REM_ASSIGN  reduce using rule 46 (Identifier_assign)
    '='         reduce using rule 46 (Identifier_assign)
    $default    reduce using rule 45 (Identifier)


State 15

   11 Block: '{' . StatementList '}'

    VAR        shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    NEWLINE    shift, and go to state 4
    PRINT      shift, and go to state 5
    PRINTLN    shift, and go to state 6
    IF         shift, and go to state 7
    FOR        shift, and go to state 8
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 14
    '{'        shift, and go to state 15
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    StatementList      go to state 54
    Statement          go to state 23
    Block              go to state 24
    Operand            go to state 25
    Literal            go to state 26
    ConversionExpr     go to state 27
    DeclarationStmt    go to state 28
    SimpleStmt         go to state 29
    AssignmentStmt     go to state 30
    Identifier         go to state 31
    Identifier_assign  go to state 32
    IncDecStmt         go to state 33
    ErrorStmt          go to state 34
    IfStmt             go to state 35
    Iftemp             go to state 36
    ForStmt            go to state 37
    Fortemp            go to state 38
    PrintStmt          go to state 39
    LogiLOR            go to state 40
    LogiLAND           go to state 41
    Comparison         go to state 42
    Expression         go to state 43
    Term               go to state 44
    Factor             go to state 45
    UnaryExpr          go to state 46


State 16

   14 Operand: '(' . Expression ')'

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 55
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Operand         go to state 25
    Literal         go to state 56
    ConversionExpr  go to state 27
    Identifier      go to state 57
    Expression      go to state 58
    Term            go to state 44
    Factor          go to state 45
    UnaryExpr       go to state 46


State 17

   18 Literal: '"' . STRING_LIT '"'

    STRING_LIT  shift, and go to state 59


State 18

   95 UnaryExpr: '+' . Factor

    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 55
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Operand     go to state 25
    Literal     go to state 56
    Identifier  go to state 57
    Factor      go to state 60
    UnaryExpr   go to state 46


State 19

   96 UnaryExpr: '-' . Factor

    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 55
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Operand     go to state 25
    Literal     go to state 56
    Identifier  go to state 57
    Factor      go to state 61
    UnaryExpr   go to state 46


State 20

   97 UnaryExpr: '!' . Factor

    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 55
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Operand     go to state 25
    Literal     go to state 56
    Identifier  go to state 57
    Factor      go to state 62
    UnaryExpr   go to state 46


State 21

    0 $accept: Program . $end

    $end  shift, and go to state 63


State 22

    1 Program: StatementList .
    2 StatementList: StatementList . Statement

    VAR        shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    NEWLINE    shift, and go to state 4
    PRINT      shift, and go to state 5
    PRINTLN    shift, and go to state 6
    IF         shift, and go to state 7
    FOR        shift, and go to state 8
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 14
    '{'        shift, and go to state 15
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    $default  reduce using rule 1 (Program)

    Statement          go to state 64
    Block              go to state 24
    Operand            go to state 25
    Literal            go to state 26
    ConversionExpr     go to state 27
    DeclarationStmt    go to state 28
    SimpleStmt         go to state 29
    AssignmentStmt     go to state 30
    Identifier         go to state 31
    Identifier_assign  go to state 32
    IncDecStmt         go to state 33
    ErrorStmt          go to state 34
    IfStmt             go to state 35
    Iftemp             go to state 36
    ForStmt            go to state 37
    Fortemp            go to state 38
    PrintStmt          go to state 39
    LogiLOR            go to state 40
    LogiLAND           go to state 41
    Comparison         go to state 42
    Expression         go to state 43
    Term               go to state 44
    Factor             go to state 45
    UnaryExpr          go to state 46


State 23

    3 StatementList: Statement .

    $default  reduce using rule 3 (StatementList)


State 24

    6 Statement: Block .

    $default  reduce using rule 6 (Statement)


State 25

   90 Factor: Operand .

    $default  reduce using rule 90 (Factor)


State 26

   12 Operand: Literal .
   49 ErrorStmt: Literal . '=' Expression
   50          | Literal . ADD_ASSIGN Expression
   51          | Literal . SUB_ASSIGN Expression
   52          | Literal . MUL_ASSIGN Expression
   53          | Literal . QUO_ASSIGN Expression
   54          | Literal . REM_ASSIGN Expression

    ADD_ASSIGN  shift, and go to state 65
    SUB_ASSIGN  shift, and go to state 66
    MUL_ASSIGN  shift, and go to state 67
    QUO_ASSIGN  shift, and go to state 68
    REM_ASSIGN  shift, and go to state 69
    '='         shift, and go to state 70

    $default  reduce using rule 12 (Operand)


State 27

   89 Term: ConversionExpr .

    $default  reduce using rule 89 (Term)


State 28

    4 Statement: DeclarationStmt . NEWLINE

    NEWLINE  shift, and go to state 71


State 29

    5 Statement: SimpleStmt . NEWLINE

    NEWLINE  shift, and go to state 72


State 30

   29 SimpleStmt: AssignmentStmt .

    $default  reduce using rule 29 (SimpleStmt)


State 31

   13 Operand: Identifier .
   39 AssignmentStmt: Identifier . ArrayType '=' Expression
   40               | Identifier . ArrayType ADD_ASSIGN Expression
   41               | Identifier . ArrayType SUB_ASSIGN Expression
   42               | Identifier . ArrayType MUL_ASSIGN Expression
   43               | Identifier . ArrayType QUO_ASSIGN Expression
   44               | Identifier . ArrayType REM_ASSIGN Expression
   91 Factor: Identifier . '[' Expression ']'

    '['  shift, and go to state 73

    $default  reduce using rule 13 (Operand)

    ArrayType  go to state 74


State 32

   33 AssignmentStmt: Identifier_assign . '=' Expression
   34               | Identifier_assign . ADD_ASSIGN Expression
   35               | Identifier_assign . SUB_ASSIGN Expression
   36               | Identifier_assign . MUL_ASSIGN Expression
   37               | Identifier_assign . QUO_ASSIGN Expression
   38               | Identifier_assign . REM_ASSIGN Expression

    ADD_ASSIGN  shift, and go to state 75
    SUB_ASSIGN  shift, and go to state 76
    MUL_ASSIGN  shift, and go to state 77
    QUO_ASSIGN  shift, and go to state 78
    REM_ASSIGN  shift, and go to state 79
    '='         shift, and go to state 80


State 33

   30 SimpleStmt: IncDecStmt .

    $default  reduce using rule 30 (SimpleStmt)


State 34

   32 SimpleStmt: ErrorStmt .

    $default  reduce using rule 32 (SimpleStmt)


State 35

    7 Statement: IfStmt .

    $default  reduce using rule 7 (Statement)


State 36

   55 IfStmt: Iftemp . Ifcomp Block
   56       | Iftemp . Ifcomp Block ElseStmt

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 55
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Operand         go to state 25
    Literal         go to state 56
    ConversionExpr  go to state 27
    Identifier      go to state 57
    Ifcomp          go to state 81
    Comparison      go to state 82
    Expression      go to state 43
    Term            go to state 44
    Factor          go to state 45
    UnaryExpr       go to state 46


State 37

    8 Statement: ForStmt .

    $default  reduce using rule 8 (Statement)


State 38

   62 ForStmt: Fortemp . ForComp Block
   63        | Fortemp . Forsimp ';' ForComp2 ';' Forsimp2 Block

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 14
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Operand            go to state 25
    Literal            go to state 26
    ConversionExpr     go to state 27
    SimpleStmt         go to state 83
    AssignmentStmt     go to state 30
    Identifier         go to state 31
    Identifier_assign  go to state 32
    IncDecStmt         go to state 33
    ErrorStmt          go to state 34
    ForComp            go to state 84
    Forsimp            go to state 85
    LogiLOR            go to state 40
    LogiLAND           go to state 41
    Comparison         go to state 86
    Expression         go to state 43
    Term               go to state 44
    Factor             go to state 45
    UnaryExpr          go to state 46


State 39

    9 Statement: PrintStmt . NEWLINE

    NEWLINE  shift, and go to state 87


State 40

   31 SimpleStmt: LogiLOR .
   71 LogiLOR: LogiLOR . LOR LogiLAND

    LOR  shift, and go to state 88

    $default  reduce using rule 31 (SimpleStmt)


State 41

   72 LogiLOR: LogiLAND .
   73 LogiLAND: LogiLAND . LAND Comparison

    LAND  shift, and go to state 89

    $default  reduce using rule 72 (LogiLOR)


State 42

   74 LogiLAND: Comparison .
   75 Comparison: Comparison . GTR Expression
   76           | Comparison . LSS Expression
   77           | Comparison . GEQ Expression
   78           | Comparison . LEQ Expression
   79           | Comparison . EQL Expression
   80           | Comparison . NEQ Expression

    GEQ  shift, and go to state 90
    LEQ  shift, and go to state 91
    EQL  shift, and go to state 92
    NEQ  shift, and go to state 93
    GTR  shift, and go to state 94
    LSS  shift, and go to state 95

    $default  reduce using rule 74 (LogiLAND)


State 43

   81 Comparison: Expression .
   82 Expression: Expression . '+' Term
   83           | Expression . '-' Term

    '+'  shift, and go to state 96
    '-'  shift, and go to state 97

    $default  reduce using rule 81 (Comparison)


State 44

   84 Expression: Term .
   85 Term: Term . '*' Factor
   86     | Term . '/' Factor
   87     | Term . '%' Factor

    '*'  shift, and go to state 98
    '/'  shift, and go to state 99
    '%'  shift, and go to state 100

    $default  reduce using rule 84 (Expression)


State 45

   88 Term: Factor .

    $default  reduce using rule 88 (Term)


State 46

   94 Factor: UnaryExpr .

    $default  reduce using rule 94 (Factor)


State 47

   26 DeclarationStmt: VAR IDENT . TypeName
   27                | VAR IDENT . TypeName '=' Factor
   28                | VAR IDENT . ArrayType TypeName

    INT     shift, and go to state 101
    FLOAT   shift, and go to state 102
    BOOL    shift, and go to state 103
    STRING  shift, and go to state 104
    '['     shift, and go to state 105

    TypeName   go to state 106
    ArrayType  go to state 107


State 48

   19 ConversionExpr: INT '(' . Expression ')'

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 55
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Operand         go to state 25
    Literal         go to state 56
    ConversionExpr  go to state 27
    Identifier      go to state 57
    Expression      go to state 108
    Term            go to state 44
    Factor          go to state 45
    UnaryExpr       go to state 46


State 49

   20 ConversionExpr: FLOAT '(' . Expression ')'

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 55
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Operand         go to state 25
    Literal         go to state 56
    ConversionExpr  go to state 27
    Identifier      go to state 57
    Expression      go to state 109
    Term            go to state 44
    Factor          go to state 45
    UnaryExpr       go to state 46


State 50

   69 PrintStmt: PRINT '(' . LogiLOR ')'

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 55
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Operand         go to state 25
    Literal         go to state 56
    ConversionExpr  go to state 27
    Identifier      go to state 57
    LogiLOR         go to state 110
    LogiLAND        go to state 41
    Comparison      go to state 42
    Expression      go to state 43
    Term            go to state 44
    Factor          go to state 45
    UnaryExpr       go to state 46


State 51

   70 PrintStmt: PRINTLN '(' . LogiLOR ')'

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 55
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Operand         go to state 25
    Literal         go to state 56
    ConversionExpr  go to state 27
    Identifier      go to state 57
    LogiLOR         go to state 111
    LogiLAND        go to state 41
    Comparison      go to state 42
    Expression      go to state 43
    Term            go to state 44
    Factor          go to state 45
    UnaryExpr       go to state 46


State 52

   47 IncDecStmt: IDENT INC .

    $default  reduce using rule 47 (IncDecStmt)


State 53

   48 IncDecStmt: IDENT DEC .

    $default  reduce using rule 48 (IncDecStmt)


State 54

    2 StatementList: StatementList . Statement
   11 Block: '{' StatementList . '}'

    VAR        shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    NEWLINE    shift, and go to state 4
    PRINT      shift, and go to state 5
    PRINTLN    shift, and go to state 6
    IF         shift, and go to state 7
    FOR        shift, and go to state 8
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 14
    '{'        shift, and go to state 15
    '}'        shift, and go to state 112
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Statement          go to state 64
    Block              go to state 24
    Operand            go to state 25
    Literal            go to state 26
    ConversionExpr     go to state 27
    DeclarationStmt    go to state 28
    SimpleStmt         go to state 29
    AssignmentStmt     go to state 30
    Identifier         go to state 31
    Identifier_assign  go to state 32
    IncDecStmt         go to state 33
    ErrorStmt          go to state 34
    IfStmt             go to state 35
    Iftemp             go to state 36
    ForStmt            go to state 37
    Fortemp            go to state 38
    PrintStmt          go to state 39
    LogiLOR            go to state 40
    LogiLAND           go to state 41
    Comparison         go to state 42
    Expression         go to state 43
    Term               go to state 44
    Factor             go to state 45
    UnaryExpr          go to state 46


State 55

   45 Identifier: IDENT .

    $default  reduce using rule 45 (Identifier)


State 56

   12 Operand: Literal .

    $default  reduce using rule 12 (Operand)


State 57

   13 Operand: Identifier .
   91 Factor: Identifier . '[' Expression ']'

    '['  shift, and go to state 113

    $default  reduce using rule 13 (Operand)


State 58

   14 Operand: '(' Expression . ')'
   82 Expression: Expression . '+' Term
   83           | Expression . '-' Term

    ')'  shift, and go to state 114
    '+'  shift, and go to state 96
    '-'  shift, and go to state 97


State 59

   18 Literal: '"' STRING_LIT . '"'

    '"'  shift, and go to state 115


State 60

   95 UnaryExpr: '+' Factor .

    $default  reduce using rule 95 (UnaryExpr)


State 61

   96 UnaryExpr: '-' Factor .

    $default  reduce using rule 96 (UnaryExpr)


State 62

   97 UnaryExpr: '!' Factor .

    $default  reduce using rule 97 (UnaryExpr)


State 63

    0 $accept: Program $end .

    $default  accept


State 64

    2 StatementList: StatementList Statement .

    $default  reduce using rule 2 (StatementList)


State 65

   50 ErrorStmt: Literal ADD_ASSIGN . Expression

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 55
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Operand         go to state 25
    Literal         go to state 56
    ConversionExpr  go to state 27
    Identifier      go to state 57
    Expression      go to state 116
    Term            go to state 44
    Factor          go to state 45
    UnaryExpr       go to state 46


State 66

   51 ErrorStmt: Literal SUB_ASSIGN . Expression

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 55
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Operand         go to state 25
    Literal         go to state 56
    ConversionExpr  go to state 27
    Identifier      go to state 57
    Expression      go to state 117
    Term            go to state 44
    Factor          go to state 45
    UnaryExpr       go to state 46


State 67

   52 ErrorStmt: Literal MUL_ASSIGN . Expression

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 55
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Operand         go to state 25
    Literal         go to state 56
    ConversionExpr  go to state 27
    Identifier      go to state 57
    Expression      go to state 118
    Term            go to state 44
    Factor          go to state 45
    UnaryExpr       go to state 46


State 68

   53 ErrorStmt: Literal QUO_ASSIGN . Expression

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 55
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20

    Operand         go to state 25
    Literal         go to state 56
    ConversionExpr  go to state 27
    Identifier      go to state 57
    Expression      go to state 119
    Term            go to state 44
    Factor          go to state 45
    UnaryExpr       go to state 46


State 69

   54 ErrorStmt: Literal REM_ASSIGN . Expression

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    TRUE       shift, and go to state 9
    FALSE      shift, and go to state 10
    INT_LIT    shift, and go to state 11
    FLOAT_LIT  shift, and go to state 12
    BOOL_LIT   shift, and go to state 13
    IDENT      shift, and go to state 55
    '('        shift, and go to state 16
    '"'        shift, and go to state 17
    '+'        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
